annotation_ui/web/style.css
* {
    font-family: Roboto, Arial, Helvetica, sans-serif;
}

#main_text_area,
#instruction_area_bot,
#instruction_area_top {
    vertical-align: top;
    margin-top: 20px;
    border: 2px solid black;
    padding: 20px;
    background-color: #fff;
    display: inline-block;

    margin-left: 10px;
    margin-right: 10px;
}

#main_text_area {
    width: 1150px;
    height: 600px;
    overflow-y: scroll;
    font-size: 1.1em;
    text-align: justify;
    /* position relative to make it the baseline for questions */
    position: relative;
}

#article_frame {
    width: 900px;
    height: auto;
    padding: 20px;
    padding-bottom: 0px;
    margin-bottom: -10px;
    margin-top: -20px;
    display: inline-block;
}

.paragraph_blurbox {
    /* 100% actually spans the whole main text area */
    width: calc(100% - 30px);
    margin-left: -10px;
    backdrop-filter: blur(4px);
    /* make sure it's in foreground */
    z-index: 200;
    position: absolute;
}

#main_text_area #main_question_panel {
    width: 180px;
    height: 100%;
    display: inline-block;
    vertical-align: top;
}

#main_question_panel {
    margin-top: 10px;
}

#main_question_panel hr.line {
    border: 1px solid #FF8800;
}

#main_question_panel hr.arrow {
    border: 2px solid #FF8800;
}

.question_box {
    background-color: #FF8800;
    border-radius: 5px;
    padding: 5px;
    margin-bottom: 10px;
    width: 200px;
    /* font-size: small; */
    text-align: left;
}

a {
    color: black;
    font-weight: bold;
}


#instruction_area_top,
#instruction_area_bot {
    width: 1000px;
    text-align: left;
    padding: 15px;
}

textarea.performance_question_value {
    width: 900px;
    height: 80px;
    resize: none;
    overflow-y: scroll;
}

textarea.performance_question_small_value {
    width: 400px;
    height: 40px;
    resize: none;
    overflow-y: scroll;
}


input[type="range"].performance_question_value {
    margin-bottom: -5px;
}

.performance_question_likert_parent {
    padding-top: 5px;
    width: 900px;
    text-align: center;
}

.performance_question_likert_label {
    display: inline-block;
    width: 200px;
}

.performance_question_likert_labels {
    word-spacing: 12px;
}

#instruction_area_big {
    width: 1220px;
    text-align: left;
}

#but_next {
    width: 145px;
    height: 40px;
    display: inline-block;
    vertical-align: top;
}

.hi_input_val {
    margin-left: 150px;
}

.hi_input_label {
    margin-left: 20px;
    vertical-align: top;
}

.performance_question_likert_labels {
    user-select: none;
}

.question_rate_section {
    font-size: small;
    font-weight: bold;
}

body {
    text-align: center;
    margin-bottom: 20px;
    background-color: #bfd1b5;
}

input[type="button"] {
    background-color: #d7dadd;
    border: none;
    border-radius: 6px;
    box-sizing: border-box;
    color: #24292E;
    cursor: pointer;
    display: inline-block;
    font-size: 14px;
    font-weight: 900;
    line-height: 20px;
    padding: 6px 16px;
    vertical-align: middle;
}

input[type="button"]:hover {
    background-color: #c9cacc;
}

input[type="button"]:active {
    background-color: #d9dbdf;
}

.paragraph_finished_button {
    font-size: small !important;
    padding: 0px 3px 0px 3px !important;
    margin-top: -2px;
}

